--- a/frontend/styles/custom.css
+++ b/frontend/styles/custom.css
@@ -1,5 +1,5 @@
 .background {
-    background: url(images/bunch-houses-that-are-each-other_941033-7887.avif);
+    background: url(../images/bunch-houses-that-are-each-other_941033-7887.avif);
     height: 100%;
     width: 100%;
     background-repeat: no-repeat;
